--- a/JS/js_advanced.html
+++ b/JS/js_advanced.html
@@ -825,7 +825,7 @@
         //But still if you use ParseInt on a string, it do not shows error cuz it has a forgiving nature... haha..
         //Therefore it is necessary to make or throw errors manually.
         //Trowing an error :
-        throw SyntaxError("This is an example error.")
+        // throw SyntaxError("This is an example error.") // The rest of the code will not be executed.
         // All error types : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error
         // We can either throw error or catch the error in console.
         try{
@@ -835,8 +835,72 @@
         }
 
         // Finally Clause:
-        
+        // Even if try runs or catch runs, finally will always run. This is useful, specially in functions as functions wont run the code that is written after return.
+        function trial(){
+            try{
+                return console.log("your command")
+            }catch{
+                return console.log("your command")
+            }finally{
+                console.log("This will run even after the return statement.")
+            }
+        }
 
+    // ***************************************************//
+        //IIFE: A function that runs as soon as it is defined.
+        async function sleep(){
+            return new Promise((resolve,reject)=>{
+                setTimeout(()=>{
+                    resolve(69)
+                },1000)
+            })
+        }
+
+        // async function Main3() {
+        //     let c = await sleep()
+        //     let d = await sleep()
+        // } 
+        // Main3()// Instead calling one more async function we use IIFE.
+
+        (async function main4() {
+            let a = await sleep()
+            let b = await sleep()
+        })() // This is IIFE.
+
+        // DESTRUCTURING: Destructuring assignment is used to unpack values from an array, or properties from objects,into distinct variables.
+        let [x,y]=[1,2] // x is assigned with 1 and y is assigned with 2.
+        console.log(x,y)
+        let [d,e, ...f] = [1,2,3,4,5,6,7,8,9] // When ... is added rest of the numbers are stored in f. If not added, they are ignored.
+        //Similarly we can destructure objects on the left hand side of the assignment.
+        const objects = {
+            a:1,
+            b:2
+        }
+        const{g,h}= objects
+        console.log(g,h)
+
+        //SPREAD SYNTAX:Spread Operator(...) opens the iterables such as arrays or strings.
+        const array1 = [4,2,1]
+        function sum(a,b,c){
+            return a+b+c
+        }
+        console.log(sum(...array1)) // 7
+        console.log(...array1) 
+        // Helps to make a object of an array.
+        let obj2 = {...array1}//{0:4,1:2,2:1}
+
+        //LOCAL, GLOBAL AND  BLOCK SCOPES :
+        //1. BLOCK SCOPE : variables declared in one block {} cannot be accessed by other blocks. Example: let and const.
+        //A variable declared outside a function becomes global.
+
+        //HOISTING: Refers to the process whereby the interpreter appears to move the declarations to the top of the code before execution. This can be seen in var and not in let or const.
+        console.log(Dr) // Returns undefined because var Dr gets declared on the top due to hoisting.
+        var Dr = 420;
+        DrFhinx("This works because of hoisting")
+         function DrFhinx(msg){
+            console.log(msg)
+        } // This will not work if func is defined using const, let. It will not work even with var because var will only get declared due to hoisting and not assigned and since it will not be assigned with the function, the function is not declared and hence it throws an error.
+        //------------------------------------ ADVANCED JS THE END ------------------------------------------------//
     </script>
 </body>
 
