--- a/JS/questions/projects/magical_sorting_hat.html
+++ b/JS/questions/projects/magical_sorting_hat.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
+        //The Magical Sorting Hat: Imagine you are creating a magical sorting hat for a wizard school. Implement a JavaScript function that takes an array of student names and assigns them to one of the four houses (Gryffindor (length less than 6), Hufflepuff(length less than 8), Ravenclaw(length less than 12), or Slytherin(length greater than or equal to 12)) based on the length of their names.
         let houses = {
-            griffindoor:["Griffindoor students :"],
-            hufflepuff:["Hu"],
-            ravenclaw:[],
-            slytherin:[]
+            griffindoor: ["Griffindoor students :"],
+            hufflepuff: ["Hufflepuff students :"],
+            ravenclaw: ["Ravenclaw students :"],
+            slytherin: ["Slytherinn students :"]
         }
-       function MagicalSorting(StudentNames){
-        const nameLength = Array.from(StudentNames).length
-        if(nameLength<6){ houses.griffindoor.push(StudentNames)}
-        else if(nameLength<8){ houses.hufflepuff.push(StudentNames)}
-        else if(nameLength<12){ houses.ravenclaw.push(StudentNames)}
-        else  houses.slytherin.push(StudentNames)
-       }
+        function MagicalSorting(StudentNames) {
+            const nameLength = Array.from(StudentNames).length
+            if (nameLength < 6) { houses.griffindoor.push(StudentNames) }
+            else if (nameLength < 8) { houses.hufflepuff.push(StudentNames) }
+            else if (nameLength < 12) { houses.ravenclaw.push(StudentNames) }
+            else houses.slytherin.push(StudentNames)
+        }
         let dummyVariable = 1
-        while(dummyVariable){
+        while (dummyVariable) {
             const StudentNames = prompt("Enter the name of a student")
-            if(!StudentNames){
-                dummyVariable=0
-            }else{
+            if (!StudentNames) {
+                dummyVariable = 0
+            } else {
                 MagicalSorting(StudentNames)
             }
         }
-        console.log( houses.griffindoor)
-        console.log( houses.hufflepuff)
-        console.log( houses.ravenclaw)
-        console.log( houses.slytherin)
+        console.log(houses.griffindoor)
+        console.log(houses.hufflepuff)
+        console.log(houses.ravenclaw)
+        console.log(houses.slytherin)
 
 
     </script>
 </body>
+
 </html>
